--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -32,6 +32,12 @@
     button:hover {
         background-color: #ff6a00;
     }
+    button:disabled,
+    button[disabled]{
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    }
     button.correct {
         background-color: green;
         color: white;
@@ -42,7 +48,7 @@
         animation: shake 0.2s ease-in-out 0s 2;
         box-shadow: 0 0 0.6rem #ff0000;
     }
-    button.sharp {
+    button.accidental {
         margin-right: 2rem;
     }
     .dropdown {
@@ -110,13 +116,13 @@
         { src: "assets/images/staffFsharp2.jpg", fretSrc: "assets/images/fretboardFsharp2.jpg", answer: "F#", audio: "assets/audio/Pitch recognition audio-Fsharp2.mp3" },
         { src: "assets/images/staffG1.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G1.mp3" },
         { src: "assets/images/staffG2.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G2.mp3" },
-        { src: "assets/images/staffGsharp2.jpg", fretSrc: "assets/images/fretboardGsharp2.jpg", answer: "G#", audio: "assets/audio/Pitch recognition audio-Gsharp2.mp3" },
+        { src: "assets/images/staffGsharp1.jpg", fretSrc: "assets/images/fretboardGsharp1.jpg", answer: "G#", audio: "assets/audio/Pitch recognition audio-Gsharp1.mp3" },
         //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 7", audio: "audio7.mp3" },
         //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 8", audio: "audio8.mp3" }
     ];
 
-    let buttonOptions = ["A", "B", "C", "D", "E", "F", "G", "|", "C#", "F#", "G#"];
-    let buttonModifiers = ["#"]
+    let buttonOptions = ["A", "B", "C", "D", "E", "F", "G"];
+    let buttonModifiers = ["#", "♭"]
 
     let count = 0;
     let incorrectCount = 0;
@@ -127,7 +133,7 @@
 
     
     function shuffleOrder() {
-    const numbers = [0, 1, 2, 3, 4, 5];
+    const numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
     for (let i = numbers.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
         [numbers[i], numbers[j]] = [numbers[j], numbers[i]];
@@ -202,40 +208,63 @@
         optionsContainer.innerHTML = "";
         buttonOptions.forEach(option => {
             if (option === "|") {
-                let br = document.createElement("br");
-                optionsContainer.appendChild(br);
+                optionsContainer.appendChild(document.createElement("br"));
             }
             else {
                 let button = document.createElement("button");
-                if (option.includes("#")) {
-                    button.classList.add("sharp");
-                }
                 button.textContent = option;
-                button.onclick = () => checkAnswer(button, option === currentImage.answer);
+                button.onclick = () => checkAnswer(button, option === currentImage.answer, currentImage, optionsContainer);
                 optionsContainer.appendChild(button);
             }
         });
+        optionsContainer.appendChild(document.createElement("br"))
+        buttonModifiers.forEach(option => {
+            let button = document.createElement("button");
+            button.textContent = option;
+            button.classList.add("accidental");
+            button.disabled = true;
+            button.onclick = () => checkAnswerAccidental(button, currentImage, optionsContainer);
+            optionsContainer.appendChild(button);
+        })
     }
 
-    async function checkAnswer(button, isCorrect) {
+    async function checkAnswer(button, isCorrect, currentImage, optionsContainer) {
         //const buttons = document.querySelectorAll("#options button");
         if (isCorrect) {
+            button.classList.add("correct");
+            const audio = new Audio(images[imageOrder[count]].audio);
+            audio.play();
+            count++;
+            correctCount++;
+            questionCount++;
+            score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
+            await new Promise(r => setTimeout(r, 750));
+            displayQuestion();
+        }
+        else {
+            if ((currentImage.answer.includes("#") || currentImage.answer.includes("♭")) && button.textContent.includes(currentImage.answer.charAt(0))){
                 button.classList.add("correct");
-                const audio = new Audio(images[imageOrder[count]].audio);
-                audio.play();
-                count++;
-                correctCount++;
-                questionCount++;
-                score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
-                await new Promise(r => setTimeout(r, 750));
-                displayQuestion();
+                optionsContainer.querySelectorAll("button").forEach(button => button.disabled = false);
             }
-            else {
+            else{
                 incorrectCount++;
                 button.classList.add("incorrect");
                 score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
             }
-            button.disabled = true;
+        }
+        button.disabled = true;
+    }
+
+    async function checkAnswerAccidental(button, currentImage, optionsContainer) {
+        let note = optionsContainer.querySelector("button.correct").textContent;
+        if (note + button.textContent === currentImage.answer)  {
+            checkAnswer(button, true, currentImage, optionsContainer);
+        }
+        else {
+            incorrectCount++;
+            button.classList.add("incorrect");
+            score = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
+        }
     }
 
     displayQuestion();
