--- a/Note-Namer-Level-8a/index.html
+++ b/Note-Namer-Level-8a/index.html
@@ -21,7 +21,7 @@
     button {
         padding: 1% 2%;
         margin: 1%;
-        font-size: 1.6rem;
+        font-size: 150%;
         cursor: pointer;
         border: none;
         border-radius: 45%;
