--- a/Note-Namer-Level-3/index.html
+++ b/Note-Namer-Level-3/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Note-Namer Level 3</title>
 <style>
+    
     body {
         margin: auto;
         font-family: Arial, sans-serif;
@@ -19,18 +20,24 @@
         max-height: 100%;
     }
     button {
-        padding: 1rem 2rem;
-        margin: 1rem;
-        font-size: 1.6rem;
+        padding: 1% 2%;
+        margin: 1%;
+        font-size: 120%;
         cursor: pointer;
         border: none;
         border-radius: 45%;
         color: white;
         background-color: #bc4c01;
-        filter: drop-shadow(.2rem .2rem .4rem #414040);
+        filter: drop-shadow(2px 2px 4px #414040);
     }
     button:hover {
         background-color: #ff6a00;
+    }
+    button:disabled,
+    button[disabled]{
+    border: none;
+    background-color: #cccccc;
+    color: #666666;
     }
     button.correct {
         background-color: green;
@@ -41,41 +48,25 @@
         color: white;
         animation: shake 0.2s ease-in-out 0s 2;
         box-shadow: 0 0 0.6rem #ff0000;
-    }.dropdown {
-        position: relative;
-        display: inline-block;
-        margin-left: 100px;
     }
-    .dropdown.score {
-        margin-left: 0px;
-    }
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 350px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        padding: 12px 16px;
-        z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
+    button.accidental {
+        margin-left: 1.8%;
+        margin-right: 1.8%;
     }
     @keyframes shake {
         0% {
-            margin-right: 0rem;
+            margin-right: 0%;
         }
         25% {
-            margin-right: -0.2rem;
-            margin-left:   0.2rem;
+            margin-right: -0.1%;
+            margin-left:   0.1%;
         }
         75% {
-            margin-right: 0.2rem;
-            margin-left: -0.2rem;
+            margin-right: 0.1%;
+            margin-left: -0.1%;
         }
         100% {
-            margin-right: 0rem;
+            margin-right: 0%;
         }
     }
     
